--- a/styles/airbnbStyleSheet.css
+++ b/styles/airbnbStyleSheet.css
@@ -21,7 +21,7 @@ button.profile-button {
 
 /* **FORMS** */
 button.logout-button {
-  margin: 3px;
+  margin: 3px 40px 3px 3px;
 }
 
 /* **LAYOUT** */
