--- a/styles/airbnbStyleSheet.css
+++ b/styles/airbnbStyleSheet.css
@@ -36,6 +36,14 @@ button.logout-button {
 }
 
 .rooms-button {
+  width: 300px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.max-price-button {
   width: 250px;
   margin-top: auto;
   margin-bottom: auto;
