--- a/styles/airbnbStyleSheet.css
+++ b/styles/airbnbStyleSheet.css
@@ -26,7 +26,7 @@ button.profile-button {
 }
 
 button.nav-house-search {
-  background-color: darkseagreen;
+  background-color: forestgreen;
   color: white;
   margin-left: 40px;
 }
@@ -111,4 +111,9 @@ div.card-location-wrapper1 {
 
 a.card-location {
   text-decoration: none;
+}
+
+section.house-photos {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
