--- a/styles/airbnbStyleSheet.css
+++ b/styles/airbnbStyleSheet.css
@@ -115,3 +115,10 @@ div.card-location-wrapper1 {
 a.card-location {
   text-decoration: none;
 }
+
+.login-background {
+  background-image: url(https://res.cloudinary.com/dsko6ntfj/image/upload/v1642399115/portal/web%20development%20beginners/05%20Project%20Airbnb/assets/thailand.jpg);
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+}
